# amygdala

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  app.py  architecture_diagram.md  pyproject.toml  requirements.txt
.github/: labeler.yml
.github/workflows/: codeql.yml  docker-image.yml  greetings.yml  label.yml  manual.yml  pylint.yml  python-app.yml  python-publish.yml  stale.yml  summary.yml
amygdala/: __init__.py  alert_ingestor.py  demo.py  investigate_agent.py  main.py  mcp_client.py  output_handler.py  report_builder.py  triage_agent.py
config/: settings.yaml
docs/: architecture.md  index.html  script.js  style.css
examples/: sample_alert.json  sample_alerts.json
prompts/: triage_prompt.yaml
public/: llms.txt  robots.txt  skills.md
tests/: test_demo.py  test_investigation.py  test_mcp_client.py  test_output_handler.py  test_report_builder.py  test_triage.py
